--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-spring/three": "^9.7.5",
+    "@react-three/fiber": "^8.14.0",
+    "@shadergradient/react": "^2.0.25",
     "@supabase/supabase-js": "^2.45.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -57,6 +60,8 @@
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0",
+    "typed.js": "^2.1.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
